--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "backend first application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon scr/index.js"
   },
   "keywords": [
     "javascript",
     "backend"
   ],
   "author": "harsh",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
